--- a/frontend/src/pages/Opportunities/OpportunitiesPage/OpportunitiesPage.scss
+++ b/frontend/src/pages/Opportunities/OpportunitiesPage/OpportunitiesPage.scss
@@ -811,3 +811,12 @@
   height: 42px;
   min-height: 42px;
 }
+
+.opportunities-page__salary-filter {
+  .salary-filter__title {
+    font-size: 16px;
+    font-weight: 700;
+    color: #113338;
+    line-height: 1.2;
+  }
+}
